app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media screen and (min-width: 768px) {
  .event-hero {
    background-color: #fff;
    border-radius: 16px;
    font-size: 0;
    margin: 0 auto;
    max-height: 50vw;
    max-width: 1200px;
    overflow: hidden;
    position: relative;
    text-align: center;
  }
}

@media screen and (min-width: 1200px) {
  .event-hero-wrapper {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='1676' height='430' viewBox='0 0 1676 430' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_3405_50198)'%3E%3Cpath d='M1669.31 -124.702C1704.63 -198.281 1599.75 -278.89 1440.21 -219.509C1280.67 -160.128 1138.67 -174.472 940.588 -234.668C588.163 -341.792 438.492 -309.897 215.804 -220.763C150.423 -195.199 15.9418 -122.33 0.814447 -35.3897C-18.0424 73.26 298.334 62.7189 143.288 203.358C-11.7568 343.996 26.7216 552.457 835.628 313.658C939.215 283.079 1109.58 269.122 1259.68 366.729C1409.78 464.336 1549.16 434.834 1602.55 362.937C1716.96 208.836 1609.92 -1.08292 1669.31 -124.702Z' fill='%23EDF1FC'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_3405_50198'%3E%3Crect width='1676' height='430' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
    padding-top: 20px;
    background-position: top;
    background-repeat: no-repeat;
  }
}

@layer utilities {
  #offering a {
    @apply border-b border-dotted border-black hover:border-solid italic
  }

  .wrapper {
    @apply w-full max-w-screen-2xl lg:mx-auto p-6;
  }

  .wrapper-width {
    @apply w-full max-w-screen-2xl lg:mx-auto px-6 ;
  }

  .error-headline {
    @apply text-3xl md:text-5xl font-extrabold
  }

  .error-subHeadline {
    @apply text-xl md:text-2xl text-gray-500
  }

  .menu-item {
    @apply text-right block w-full text-lg font-medium text-gray-800 py-3 px-4 border-b border-gray-400 hover:bg-primary/10 focus:bg-primary/20 focus:outline-none focus:ring-2 focus:ring-primary transition-all duration-200;
  }

  .navbar-menu-item {
    @apply py-3 px-4 w-full text-right border-b border-gray-400 focus:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-primary;
  }

  .navbar-menu-toggle {
    @apply sm:hidden w-10 h-10 p-2 rounded-full flex items-center justify-center tap-highlight-transparent outline-none focus:outline-none focus:ring-2 focus:ring-primary transition-transform;
  }


}

/* Clerk Auth */
.cl-footer,
.cl-footerAction,
.cl-footerAction__signIn {
  background: white none;
}

.cl-footer [class*="cl-internal"],
.cl-footerAction [class*="cl-internal"] {
  background: white none;
}

.cl-footer div[class*="cl-internal"] div[class*="cl-internal"] {
  background-color: white;
}

.cl-footer *,
.cl-footerAction * {
  background-color: white;
}

